# ti-omap3-sgx-wayland-wsegl

./: Makefile.am  configure.ac
common/: Makefile.am  log.c  log.h  server_wlegl.cpp  server_wlegl.h  server_wlegl_buffer.cpp  server_wlegl_buffer.h  wlwsegl-common.h  wlwsegl-log.c  wsegl_buffer_sizes.h
libegl/: Makefile.am  egl-wlwsegl.h  egl.c  egl.cpp  egl.pc.in  libegl.pro
libgbm/: Makefile.am  backend.c  backend_pvr_omap3.c  gbm.c  gbm.pc.in  gbm_pvr_omap3_int.h
libwayland-egl/: Makefile.am  wayland-egl-priv.h  wayland-egl.c  wayland-egl.pc.in
wsegl/: Makefile.am  powervr.ini  waylandwsegl.c
